--- a/Src/Niagara.vcxproj
+++ b/Src/Niagara.vcxproj
@@ -120,7 +120,7 @@
     <CustomBuild />
     <CustomBuild>
       <Outputs>.\CompiledShaders\%(FileName).spv;%(Outputs)</Outputs>
-      <Command>$(VULKAN_SDK)\Bin\glslangValidator %(FullPath) -V --target-env vulkan1.3 -o .\CompiledShaders\%(FileName).spv
+      <Command>$(VULKAN_SDK)\Bin\glslangValidator %(FullPath) -V -g --target-env vulkan1.3 -o .\CompiledShaders\%(FileName).spv
 </Command>
       <AdditionalInputs>
       </AdditionalInputs>
@@ -201,6 +201,7 @@
     <ClCompile Include="Swapchain.cpp" />
     <ClCompile Include="Utilities.cpp" />
     <ClCompile Include="VkCommon.cpp" />
+    <ClCompile Include="VkQuery.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\External\glfw\src\platform.h" />
@@ -216,6 +217,7 @@
     <ClInclude Include="..\External\SPIRV-Cross\spirv_glsl.hpp" />
     <ClInclude Include="..\External\SPIRV-Cross\spirv_parser.hpp" />
     <ClInclude Include="..\External\volk\volk.h" />
+    <ClInclude Include="VkQuery.h" />
     <CustomBuild Include="..\Shaders\DrawCommand.comp.glsl">
       <FileType>Document</FileType>
     </CustomBuild>
