--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "External/stb"]
 	path = External/stb
 	url = https://github.com/nothings/stb
+[submodule "External/METIS"]
+	path = External/METIS
+	url = https://github.com/KarypisLab/METIS.git
